<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="account_name">Account Name</string>
    <string name="account_type">Account Type</string>
    <string name="actions">ACTIONS</string>
    <string name="active">Active</string>
    <string name="add_reminder">Add Reminder</string>
    <string name="app_name">Calendar Import-Export</string>
    <string name="calendar_selection">CALENDAR SELECTION</string>
    <string name="calendar_url">Calendar URL</string>
    <string name="delete">Delete</string>
    <string name="delete_entries">Delete entries</string>
    <string name="destination_filename">Destination Filename</string>
    <string name="did_not_check_for_dupes">Did not check for duplicates.</string>
    <string name="enter_destination_filename">Enter Destination Filename</string>
    <string name="enter_source_url">Enter Source URL</string>
    <string name="error">Error</string>
    <string name="events">Events</string>
    <string name="help">Help</string>
    <string name="id">id</string>
    <string name="import_file">Import File</string>
    <string name="import_network">Import URL</string>
    <string name="inactive">Inactive</string>
    <string name="information">Information</string>
    <string name="insert_entries">Insert entries</string>
    <string name="invalid_url">Invalid URL</string>
    <string name="legal_notices">Legal Notices</string>
    <string name="load_calendar">Load</string>
    <string name="login_required">Login Required</string>
    <string name="name">Name</string>
    <string name="no_calendars_found">No calendars found.\n\nYou must create a calendar to import to/export from. You can install \"Offline Calendar\" to create one.\n\nIf you are using Cyanogenmod: Make sure that Privacy Guard is disabled for this application to  allow calendar read/write.\n\nIf you are using Android 4.3 App Ops: Make sure that you allow calendar read/write access for this application.</string>
    <string name="not_applicable">N/A</string>
    <string name="owner">Owner</string>
    <string name="password">Password</string>
    <string name="processing_entries">Processing entries&#8230;</string>
    <string name="reading_file_please_wait">Reading file, please wait&#8230;</string>
    <string name="searching_for_files">Searching for iCalendar files&#8230;</string>
    <string name="select_a_calendar">Select a calendar</string>
    <string name="settings">Settings</string>
    <string name="space"> </string>
    <string name="state">State</string>
    <string name="timezone">Timezone</string>
    <string name="username">Username</string>
    <string name="writing_calendar_to_file">Writing calendar to file&#8230;</string>
    <string name="clear_calendar">Clear Calendar</string>
    <string name="clear_warning">Warning this action will erase the calendar.\nAre you ok?</string>
    <string name="warning">Warning !</string>
    <string name="erasing_data">Erasing data please wait</string>
    <string name="ics_data">ICS</string>
    <string name="more_info_calendar">More Info</string>
    <string name="clear_reminder">Clear Reminder</string>
    <string name="first_event">First event</string>
    <string name="last_event">Last event</string>
    <string name="not_available">NA</string>
    <string name="erase_previous_calendar">Erase Previous Calendar</string>
    <string name="erase_imported_reminder">Erase imported reminder</string>

    <plurals name="delete_n_entries">
         <item quantity="one">Delete %d entry</item>
         <item quantity="other">Delete %d entries</item>
    </plurals>
    <plurals name="found_n_duplicates">
         <item quantity="one">Found %d duplicate entry.</item>
         <item quantity="other">Found %d duplicate entries.</item>
    </plurals>
    <plurals name="insert_n_entries">
         <item quantity="one">Insert %d entry</item>
         <item quantity="other">Insert %d entries</item>
    </plurals>
    <plurals name="processed_n_entries">
         <item quantity="one">Processed %d entry.</item>
         <item quantity="other">Processed %d entries.</item>
    </plurals>
    <plurals name="wrote_n_events_to">
         <item quantity="one">Wrote %1$d event to %2$s</item>
         <item quantity="other">Wrote %1$d events to %2$s</item>
    </plurals>

    <!-- Must match the minutes array in RemindersDialog.java -->
    <string-array name="reminder_time_values">
        <item>5 minutes</item>
        <item>10 minutes</item>
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>45 minutes</item>
        <item>1 hour</item>
        <item>2 hours</item>
        <item>4 hours</item>
        <item>8 hours</item>
        <item>12 hours</item>
        <item>24 hours</item>
        <item>48 hours</item>
        <item>3 days</item>
        <item>4 days</item>
        <item>5 days</item>
        <item>6 days</item>
        <item>1 week</item>
        <item>2 weeks</item>
        <item>3 weeks</item>
        <item>1 month</item>
    </string-array>

</resources>
