<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollViewMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <View
            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <TextView
            style="@android:style/TextAppearance.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calendar_selection" />

        <View
            style="@style/divider" />

        <View
            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <Spinner
            android:id="@+id/SpinnerChooseCalendar"
            style="@android:style/TextAppearance.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/select_a_calendar" />

        <View
            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical" >

                <TextView
                    style="@android:style/TextAppearance.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/state"
                    android:textColor="#FF888888"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/TextCalState"
                    style="@android:style/TextAppearance.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/not_available" />

                <TextView
                        style="@android:style/TextAppearance.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/timezone"
                        android:textColor="#FF888888"
                        android:textStyle="italic" />

                <TextView
                        android:id="@+id/TextCalTimezone"
                        style="@android:style/TextAppearance.Medium"
                        android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/not_available" />

                <TextView
                        style="@android:style/TextAppearance.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/events"
                        android:textColor="#FF888888"
                        android:textStyle="italic" />

                <TextView
                        android:id="@+id/TextCalSize"
                        style="@android:style/TextAppearance.Medium"
                        android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/not_available" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical">

                <Button
                    android:id="@+id/SaveButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_export_" />

                <Button
                    android:id="@+id/ClearEventButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/clear_calendar" />

                <Button
                    android:id="@+id/ClearReminderButton"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/clear_reminder" />

            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="32dp" />

        <TextView
            style="@android:style/TextAppearance.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ics_data" />

        <View
            style="@style/divider"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/SearchButton"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/import_file" />

            <Button
                android:id="@+id/SetUrlButton"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/import_network" />
        </LinearLayout>

        <Spinner
            android:id="@+id/SpinnerFile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:visibility="visible">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/InsertButton"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/insert_entries" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="horizontal">

                    <ToggleButton
                        android:id="@+id/toggleErasePreviousCalendar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="New ToggleButton" />

                    <TextView
                        android:id="@+id/textView9"
                        style="@android:style/TextAppearance.Small"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/erase_previous_calendar" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <ToggleButton
                        android:id="@+id/toggleEraseImportedReminder"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight="2"
                        android:text="New ToggleButton" />

                    <TextView
                        android:id="@+id/textView10"
                        style="@android:style/TextAppearance.Small"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/erase_imported_reminder" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@android:style/TextAppearance.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/events"
                    android:textColor="#FF888888"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/textIcsNbEntries"
                    style="@android:style/TextAppearance.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/not_available" />

                <TextView
                    style="@android:style/TextAppearance.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/first_event"
                    android:textColor="#FF888888"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/textIcsFirstDate"
                    style="@android:style/TextAppearance.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/not_available" />

                <TextView
                    style="@android:style/TextAppearance.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/last_event"
                    android:textColor="#FF888888"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/textIcsLastDate"
                    style="@android:style/TextAppearance.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/not_available" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</ScrollView>
